# community-edition-containers

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: pygluu-compose.yml  releaseplease.yml  uploadrelease.yml
examples/gluu-gateway/: .env  README.md  certificate.pem  docker-compose.yaml  key.pem
examples/kubernetes/minikube/: README.md
examples/kubernetes/minikube/ldap/: opendj-init.yaml
examples/kubernetes/minikube/oxpassport/: oxpassport.yaml
examples/single-host/: .gitignore  README.md  app.py  docker-compose.override.yml  docker-compose.yml  requirements.txt  run_all.sh  svc.casa.yml  svc.couchbase.yml  svc.cr_rotate.yml  svc.key_rotation.yml  svc.ldap.yml  svc.oxauth.yml  svc.oxd_server.yml  svc.oxpassport.yml  svc.oxshibboleth.yml  svc.oxtrust.yml  svc.radius.yml  svc.vault_autounseal.yml
pygluu-compose/: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
pygluu-compose/pygluu/: __init__.py
pygluu-compose/pygluu/compose/: __init__.py  app.py  cli.py  settings.py  version.py
pygluu-compose/pygluu/compose/templates/: docker-compose.yml  docker.env  job.configuration.yml  job.persistence.yml  svc.autoheal.yml  svc.casa.yml  svc.cr_rotate.yml  svc.fido2.yml  svc.jackrabbit.yml  svc.key_rotation.yml  svc.ldap.yml  svc.mysql.yml  svc.nginx_ports.yml  svc.oxauth.yml  svc.oxd_server.yml  svc.oxpassport.yml  svc.oxshibboleth.yml  svc.oxtrust.yml  svc.postgresql.yml  svc.radius.yml  svc.redis.yml  svc.scim.yml
src/: .gitignore  Makefile  README.md  requirements.txt  setup.py
src/pygluu/compose/: app.py  cli.py
src/pygluu/compose/templates/: svc.casa.yml  (+4 more)
test-drive/: README.md
test-drive/single-host/: README.md  docker-compose.yml  run_all.sh
(+2 files in other folders)
